# omnivoice-tts-server

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  prod.Dockerfile
.githooks/: pre-commit
.github/workflows/: docker-publish.yml
frontend/: Dockerfile  deno.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: LanguageSelect.svelte  VoiceSelect.svelte  api.ts  llm.ts  player.svelte.ts  types.ts  wav.ts
scripts/: test_endpoint.py
server/: .gitignore  Dockerfile  main.py  pyproject.toml
server/src/: chunker.py  config.py  inference.py  utils.py  voices.py
