[project]
name = "omnivoice-tts-server"
version = "0.1.0"
description = "FastAPI server exposing OmniVoice TTS Model"
requires-python = ">=3.10,<3.13"
dependencies = [
    "blingfire>=0.1.8",
    "fastapi>=0.136.3",
    "logfire[fastapi]>=4.34.0",
    "omnivoice>=0.1.5",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "stream2sentence>=0.3.2",
    "uvicorn[standard]>=0.34",
    "watchfiles>=1.2.0",
]
