[project]
name = "omnivoice-tts-server"
version = "0.1.0"
description = "FastAPI server exposing OmniVoice TTS Model"
requires-python = ">=3.10,<3.13"
dependencies = [
    "blingfire>=0.1.8",
    "fastapi>=0.136.3",
    "logfire[fastapi]>=4.34.0",
    "omnivoice>=0.1.5",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "stream2sentence>=0.3.2",
    "uvicorn[standard]>=0.34",
    "watchfiles>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]
ignore = [
    "E402",  # module imports not at top — main.py silences transformers logging first
]
